--- a/Delete_Black_Msks_and_images.ipynb
+++ b/Delete_Black_Msks_and_images.ipynb
@@ -1119,8 +1119,8 @@
     "\n",
     "from PIL import Image\n",
     "import os\n",
-    "path = \"C:/Users/john/Downloads/AutoMap/datos/msk256_RGB_Roads_1m/\"\n",
-    "path2 = \"C:/Users/john/Downloads/AutoMap/datos/img256_RGB_Roads_1m/\"\n",
+    "path = \"path to multi class masks"\n",
+    "path2 = \"path to RG-DSM"\n",
     "\n",
     "count = 0\n",
     "\n",
