Update and rename Delete_Black_Msks_and_images.ipynb to Delete_Empty_Msks_and_Images.ipynb

--- a/Delete_Empty_Msks_and_Images.ipynb
+++ b/Delete_Empty_Msks_and_Images.ipynb
@@ -1119,8 +1119,8 @@
     "\n",
     "from PIL import Image\n",
     "import os\n",
-    "path = \"C:/Users/john/Downloads/AutoMap/datos/msk256_RGB_Roads_1m/\"\n",
-    "path2 = \"C:/Users/john/Downloads/AutoMap/datos/img256_RGB_Roads_1m/\"\n",
+    "path = \"path to masks/\"\n",
+    "path2 = \"path to images/\"\n",
     "\n",
     "count = 0\n",
     "\n",
@@ -1132,8 +1132,8 @@
     "        print(filename, len(clrs), count)\n",
     "        os.remove(path + '\\\\' + filename)\n",
     "        os.remove(path2 + '\\\\' + filename)\n",
-    "print(\"El numero total de imagenes borradas es de:\", str(count))\n",
-    "print(\"El numero total de máscaras borradas es de:\", str(count))\n",
+    "print(\"number of deleted images:\", str(count))\n",
+    "print(\"number of deleted masks:\", str(count))\n",
     "\n"
    ]
   }
